[package]
name = "actix-interop"
version = "0.1.0"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
scoped-tls = "1.0"
pin-project = "0.4.9"
futures = "0.3.4"

[patch.crates-io]
scoped-tls = { git = "https://github.com/Diggsey/scoped-tls.git", branch = "db-mut" }
